error validation for movies/{movieId}
